// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NoViewer should render the viewer 1`] = `
<div>
  <div
    class="viewer-noviewer"
    data-testid="no-viewer"
  >
    <svg
      data-icon="true"
      height="140"
      width="160"
    />
    <p
      class="viewer-filename"
    >
      notSupported.xyz
    </p>
    <button
      class="styles__c-btn___3kXsk styles__c-btn--center___Nny0n"
      type="submit"
    >
      <span>
        <span>
          Viewer.download
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoViewer should render the viewer with specific extra content 1`] = `
<div>
  <div
    class="viewer-noviewer"
    data-testid="no-viewer"
  >
    <svg
      data-icon="true"
      height="140"
      width="160"
    />
    <p
      class="viewer-filename"
    >
      notSupported.xyz
    </p>
    <div>
      with specific extra content
    </div>
  </div>
</div>
`;
